2009-01-14  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_redraw): Added a call to the refresh
	function inside the redraw because apparently in some cases the
	change in the adjustment does not imply a size allocate.

	Fixes: NB#96837 (HildonPannableArea - scroll indicator shown
	despite the view not being scrollable)

2009-01-14  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-picker-dialog.c (_dialog_update_title): Fix memory
	leak. Check for NULL before attempting to set the window title.

2009-01-14  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-picker-dialog.c (hildon_picker_dialog_show): Decide
	whether to show or not the 'Done' button each time the dialog is
	shown, as it depends on the HildonTouchSelector selection mode.

	Fixes: NB#96226 (In multiple selection mode Done button is shown
	sometimes in listpicker)

2009-01-14  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-dialog.c: (_save_current_selection): Do not query
	for the number of columns in the HildonTouchSelector more than once.

2009-01-14  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-touch-selector.c: Minor documentation fixes.

	* src/hildon-picker-dialog.c (+_dialog_update_title)
	(_select_on_selector_changed_cb)
	(_update_title_on_selector_changed_cb)
	(on_selector_columns_changed): Update dialog title when there's no
	'Done' button and also when the number of columns in the selector
	changes.
	Code refactoring.

	* src/hildon-picker-button.c (hildon_picker_button_finalize)
	(+_selection_changed, hildon_picker_button_on_dialog_response)
	(hildon_picker_button_selector_selection_changed)
	(+hildon_picker_button_selector_columns_changed)
	(hildon_picker_button_set_selector): Update button value and emit
	'value-changed' when the number of columns in the selector
	changes.
	Code refactoring.

	Fixes: NB#96225 (Dialog titles are not shown according to the
	values selected in the list picker)
